Bug 815691 - The panel's context menu doesn't change after clicking on a different item r=jimm