widget/windows/nsWindow.cpp
@@ -8024,7 +8024,7 @@ nsWindow::DealWithPopups(HWND inWnd, UINT inMsg, WPARAM inWParam, LPARAM inLPara
         } // foreach parent menu widget
       }
 
-      if (inMsg == WM_MOUSEACTIVATE && popupsToRollup == UINT32_MAX) {
+      if (inMsg == WM_MOUSEACTIVATE) {
         // Prevent the click inside the popup from causing a change in window
         // activation. Since the popup is shown non-activated, we need to eat
         // any requests to activate the window while it is displayed. Windows
